<resources>
    <string name="app_name">NeutrinoTestApp</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_registration">\registration</string>
    <string name="api_URL">http://ada.neutrinosoft.net</string>
    <string name="preferences_name">myPref</string>
    <string name="user_id">userId</string>
    
    <string name="str_et_login">login</string>
    <string name="str_et_password">password</string>
    <string name="str_verify_password">verify password</string>
    <string name="str_login">Login</string>
    <string name="str_registration">Registration</string>
    <string name="str_caution">Caution!</string>
    <string name="str_ok">OK</string>
    <string name="str_incorrect_login">Incorrect login.</string>
    <string name="str_incorrect_password">Incorrect password.</string>
    <string name="str_passwords_are_not_equal">Passwords are not equal.</string>
    <string name="str_advertisement_name">Advertisement Name</string>
    <string name="str_advertisement_description">Description</string>
    <string name="str_post">Send</string>
    <string name="str_search">Search</string>
    <string name="str_create">Create</string>


    <string name="title_activity_search_advertisement">SearchAdvertisementActivity</string>
    <string name="title_activity_create_advertisement">CreateAdvertisementActivity</string>
</resources>
